--- a/aboutme.html
+++ b/aboutme.html
@@ -3,13 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>! Javi Website - About Me</title>
-    <link rel="stylesheet" href="css/ame.css">
-    <link rel="shortcut icon" type="image/x-icon" href="img/a_a6b7f187f1a8a7c5614036eac1dc2e0b.gif">
+    <link rel="stylesheet" href="ame.css">
+    <link rel="shortcut icon" type="image/x-icon" href="a_a6b7f187f1a8a7c5614036eac1dc2e0b.gif">
 </head>
 <body>
     <div class="hero">
         <nav>
-            <img src="img/a_a6b7f187f1a8a7c5614036eac1dc2e0b.gif" class="logo" alt="">
+            <img src="a_a6b7f187f1a8a7c5614036eac1dc2e0b.gif" class="logo" alt="">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="servers.html">SERVERS</a></li>
