--- a/servers.html
+++ b/servers.html
@@ -3,14 +3,14 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>! Javi Website - Servers</title>
-    <link rel="stylesheet" href="css/prueba.css">
+    <link rel="stylesheet" href="prueba.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/a_a6b7f187f1a8a7c5614036eac1dc2e0b.gif">
 </head>
 <body>
     <div class="hero">
 
         <nav>
-            <img src="img/a_a6b7f187f1a8a7c5614036eac1dc2e0b.gif" class="logo" alt="">
+            <img src="a_a6b7f187f1a8a7c5614036eac1dc2e0b.gif" class="logo" alt="">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a class="active" href="servers.html">SERVERS</a></li>
@@ -22,7 +22,7 @@
             <div class="Lunatic">
                 <a width="150px" height="150px" href="https://discord.gg/lunaticgw" target="_blank">
     
-                    <img id="img-lunatic" src="img/a_2760b3bddacda63a032f9c276a316b01.gif" width="150px" height="150px">
+                    <img id="img-lunatic" src="a_2760b3bddacda63a032f9c276a316b01.gif" width="150px" height="150px">
                     
                 </a>
             </div>
