--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
         <div class="content">
-            <h1>! Javi#0001</h1>
+            <h1>! Eddie#0001</h1>
             <a id="scroll-down" href="aboutme.html">¿Quien Soy?</a>
         </div>
     </div>
