--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 <body>
     <div class="hero">
         <nav>
-            <img src="a_a6b7f187f1a8a7c5614036eac1dc2e0b.gif" class="logo" alt="">
+            <img src="a_a6b7f187f1a8a7c5614036eac1dc2e0b.gif.gif" class="logo" alt="">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="servers.html">SERVERS</a></li>
