--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
                 <li><a class="active" href="#">ABOUT ME</a></li>
             </ul>
         </nav>
-        <h1 style="color: #fff; font-size: 40px;" id="txt-1">¿Quien soy? Soy javier, chico que esta empezando a ser alter en un server genial llamado lunatic (Dale click <a style="text-decoration:underline; color:#fff;" id="link-1" href="https://discord.gg/lunaticgw">aqui</a> para entrar al servidor!</h1>
+        <h1 style="color: #fff; font-size: 40px;" id="txt-1">¿Quien soy? Soy javier, chico que esta empezando a ser alter en un server genial llamado lunatic (Dale click <a style="text-decoration:underline; color:#fff;" id="link-1" href="https://discord.gg/lunaticgw">aqui</a> para entrar al servidor!)</h1>
     </div>
 
 </body>
